# Plasma-Fluid-Simulation-PFFDTD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CROSS_PLATFORM_BUILD.md  DOCUMENTATION_COMPLETE.txt  LICENSE  Makefile  README.md  SESSION_PROGRESS.md  compile.bat  output.h  pffdtd.cpp  plasma.h  plasmaN3.h  plasmaN4.h  plasmaNSheath.h  run_tests.bat  source.h
archive/cpp_backups/: pffdtdN.cpp  pffdtdN1.cpp
archive/dev_docs/: DEVELOPMENT_SETUP.md  STRATEGIC_ROADMAP.md
archive/pffdtd_legacy/: FieldViz.py  Retard.h  Retard.h~  Sourceout.m  VIZ_plot.m  VIZ_plot1.m  VIZ_plotfor.m  a.out  dipole.str  dtft.m  dtftfor.m  mpatch.str  patch.str  pffdtd.asv  pffdtd.cpp  pffdtd.cpp~  plasma.h  plasma.h~  readme  run_test.m  source.h  source.h~  test_run_new.m
docs/: ARCHITECTURE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEVELOPERS.md  INDEX.md  INPUT_FORMAT.md  PARALLELIZATION_STRATEGY.md  PHYSICS.md  README_STRUCTURE.md  SETUP_SUMMARY.md
scripts/: run_simulation.bat
src/: pffdtd.cpp
src/boundary/: Retard.h  TubeBC.h
src/fields/: field_calculator.cpp  field_calculator.h
src/io/: file_handler.cpp  file_handler.h  output.cpp  output.h  outputN.h
src/physics/: plasma.cpp  plasma.h  plasmaN0.h  plasmaN1.h  plasmaN2.h
src/source/: source.cpp  source.h
src/utils/: constants.h  memallocate.cpp  memallocate.h  types.h
tests/: CMakeLists.txt  verify_plasma_flag.bat
tests/benchmarks/: benchmark_parallel.bat  benchmark_serial.bat  benchmark_serial.ps1
tests/data/: dipole_free_space.str
tests/regression/: compare_results.py  run_regression.bat
tests/unit/: test_constants.cpp
visualization/: compare_plots.py  create_test_data.py  create_test_fd.py  pffdtd_loader.py  plot_fields.py  plot_voltage.py  utils.py
